--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
    width: 100%;
    font-family: sans-serif;
    font-weight: bold;
-   border-style: solid;
+   border-style: none;
 }
 
 .colorDefinition {
